2007-06-01  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoFolder.m ([SOGoFolder -davContentType]):
	declare "httpd/unix-directory".

	* SoObjects/SOGo/SOGoUser.m ([SOGoUser +initialize]): declare
	"UTC" as fallback timezone instead of "Canada/Eastern".
	([-hasEmail:email]): make use of the new NSArray's
	containsCaseInsensitiveString: method.

	* SoObjects/Mailer/SOGoMailObject.m ([SOGoMailObject
	-davContentType]): declare "message/rfc822" as content type.

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder -_privacySqlString]): "owner" is now an
	ivar in SOGoObject.
	([SOGoAppointmentFolder
	-fetchFields:_fieldsfromFolder:_folderfrom:_startDateto:_endDatecomponent:_component]): same as above.
	([-fetchContentObjectNames]): commented out method since it was
	usefull only for testing Funambol.

	* SoObjects/SOGo/NSArray+Utilities.m ([NSArray
	-containsCaseInsensitiveString:match]): an enhanced version of
	containsObject:.

	* UI/MailerUI/UIxMailView.m ([-isTrashingAllowed]): removed
	useless method.
	([-showMarkDeletedButton]): removed useless method.
	([-showTrashButton]): removed useless method.

	* SoObjects/Appointments/iCalEntityObject+SOGo.m
	([iCalEntityObject -userIsParticipant:user]): new proxy method
	that invoked isParticipant on self for each possible email
	addresses of the user passed as parameter.
	([iCalEntityObject -userIsOrganizer:user]): same as above.

	* SoObjects/Appointments/iCalEntityObject+SOGo.[hm]: new class
	extension module.

	* SoObjects/Appointments/SOGoAppointmentObject.m
	([SOGoAppointmentObject
	-saveContentString:contentStringbaseVersion:baseVersion]): remove
	method since an event may not have an organizer.

	* SoObjects/SOGo/SOGoObject.m ([SOGoObject
	-GETAction:localContext]): clarified method. Added support for
	content-type (thanks to Helge Hess).
	([SOGoObject -initWithName:_nameinContainer:_container]):
	initialize and retain the owner.